syntax = "proto2" ;
package douyin.extra.followerlist;
option go_package = "../;pb";

message douyin_relation_follower_list_request {
  required int64 user_id = 1;//用户id
  required string token = 2; //用户鉴权token
}

message douyin_relation_follower_list_response {
  required int32 status_code = 1; //状态码，o-成功，其他值-失败
  optional string status_msg = 2; //返回状态描述
  repeated User user_list = 3; //用户列表
}

message User {
  required int64 id = 1; //用户id
  required string name = 2;//用户名称
  optional int64 follow_count = 3; //关注总数
  optional int64 follower_count = 4; //粉丝总数
  required bool is_follow = 5; // true-已关注， false-未关注}
}

service Followerlist{
  rpc GetFollowerlist(douyin_relation_follower_list_request)returns(douyin_relation_follower_list_response){}
}